--- a/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
+++ b/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
@@ -48,6 +48,9 @@
                                 <li>
                                     <a th:href="@{/manager/products/new}">Add New Products</a>
                                 </li>
+<!--                                <li>-->
+<!--                                    <a th:href="@{/manager/products/edit}">Update Products</a>-->
+<!--                                </li>-->
                             </ul>
                         </li>
 
@@ -58,11 +61,11 @@
                             </a>
                             <ul class="sidebar-submenu">
                                 <li>
-                                    <a th:href="@{/category}">Category List</a>
+                                    <a th:href="@{/manager/categories}">Category List</a>
                                 </li>
 
                                 <li>
-                                    <a th:href="@{/category/add}">Add New Category</a>
+                                    <a th:href="@{/manager/categories/new}">Add New Category</a>
                                 </li>
                             </ul>
                         </li>
