--- a/src/main/resources/templates/manager/products/new.html
+++ b/src/main/resources/templates/manager/products/new.html
@@ -68,11 +68,15 @@
         <!-- Page Sidebar Ends-->
 
         <div class="page-body">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-8 m-auto">
-                        <div class="card">
-                            <div class="card-body">
+            <div class="container mt-5 mb-5">
+<!--                <div class="row">-->
+<!--                    <div class="col-sm-8 m-auto">-->
+                        <div class="card shadow-lg border-0 rounded-3">
+                            <div class="title-header option-title">
+                                <div class="title-header option-title"><i class="ri-pencil-line me-1"></i> <h5>Add Product</h5></div>
+                                <a th:href="@{/manager/products}" class="btn btn-success px-4 me-2">← Back to Product List</a>
+                            </div>
+                            <div class="card-body px-4 py-4">
                                 <!-- Form thêm sản phẩm -->
                                 <form th:action="@{/manager/products/new}" method="post" enctype="multipart/form-data" th:object="${product}">
                                     <div class="row g-3">
@@ -145,7 +149,7 @@
                 </div>
             </div>
         </div>
-    </div>
+<!--    </div>-->
     <!-- Modal Start -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
          aria-labelledby="staticBackdropLabel" aria-hidden="true">
