--- a/src/main/resources/templates/client/component/productMenu.html
+++ b/src/main/resources/templates/client/component/productMenu.html
@@ -49,7 +49,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12 px-0">
+                        <div class="col-12 px-0" th:if="${i + 1 < #lists.size(products)}">
                             <div class="product-box wow fadeIn" data-wow-delay="0.1s">
                                 <div class="product-image">
                                     <a th:href="@{/product-detail/{id}(id=${products[i +1 ].productId})}">
