--- a/src/main/resources/templates/manager/products/edit.html
+++ b/src/main/resources/templates/manager/products/edit.html
@@ -124,13 +124,23 @@
                             <div class="row mb-3">
                                 <div class="col-md-3">
                                     <label class="form-label fw-bold">Price (₫)</label>
-                                    <input type="number" step="0.01" min="0" class="form-control"
-                                           th:field="*{product.price}" required>
+                                    <input id="price" name="price"
+                                           class="form-control"
+                                           min="0.01" max="10000000"
+                                           step="0.01"
+                                           placeholder="Enter product price"
+                                           required>
+
+                                    <div class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{product.price}"></div>
                                 </div>
                                 <div class="col-md-3">
                                     <label class="form-label fw-bold">Stock Quantity</label>
-                                    <input type="number" min="0" class="form-control"
-                                           th:field="*{product.stockQuantity}" required>
+                                    <input type="number" id="stockQuantity" name="stockQuantity"
+                                           class="form-control"
+                                           min="0" max="300"
+                                           placeholder="Enter stock quantity"
+                                           required>
+                                    <div class="text-danger" th:if="${#fields.hasErrors('stockQuantity')}" th:errors="*{product.stockQuantity}"></div>
                                 </div>
                                 <div class="col-md-3">
                                     <label class="form-label fw-bold">Status</label>
