--- a/src/main/resources/templates/client/sign-up.html
+++ b/src/main/resources/templates/client/sign-up.html
@@ -207,7 +207,7 @@
 
                         <div class="sign-up-box">
                             <h4>Already have an account?</h4>
-                            <a href="login.html">Log In</a>
+                            <a th:href="@{/login}">Log In</a>
                         </div>
                     </div>
                 </div>
