--- a/src/main/resources/templates/client/login.html
+++ b/src/main/resources/templates/client/login.html
@@ -193,7 +193,7 @@
 
                         <div class="sign-up-box">
                             <h4>Don't have an account?</h4>
-                            <a href="sign-up.html">Sign Up</a>
+                            <a th:href="@{/sign-up}">Sign Up</a>
                         </div>
                     </div>
                 </div>
@@ -250,22 +250,22 @@
                         <div class="footer-contain">
                             <ul>
                                 <li>
-                                    <a href="shop-left-sidebar.html" class="text-content">Vegetables & Fruit</a>
+                                    <a href="flowerList.html" class="text-content">Vegetables & Fruit</a>
                                 </li>
                                 <li>
-                                    <a href="shop-left-sidebar.html" class="text-content">Beverages</a>
+                                    <a href="flowerList.html" class="text-content">Beverages</a>
                                 </li>
                                 <li>
-                                    <a href="shop-left-sidebar.html" class="text-content">Meats & Seafood</a>
+                                    <a href="flowerList.html" class="text-content">Meats & Seafood</a>
                                 </li>
                                 <li>
-                                    <a href="shop-left-sidebar.html" class="text-content">Frozen Foods</a>
+                                    <a href="flowerList.html" class="text-content">Frozen Foods</a>
                                 </li>
                                 <li>
-                                    <a href="shop-left-sidebar.html" class="text-content">Biscuits & Snacks</a>
+                                    <a href="flowerList.html" class="text-content">Biscuits & Snacks</a>
                                 </li>
                                 <li>
-                                    <a href="shop-left-sidebar.html" class="text-content">Grocery & Staples</a>
+                                    <a href="flowerList.html" class="text-content">Grocery & Staples</a>
                                 </li>
                             </ul>
                         </div>
@@ -282,7 +282,7 @@
                                     <a href="index.html" class="text-content">Home</a>
                                 </li>
                                 <li>
-                                    <a href="shop-left-sidebar.html" class="text-content">Shop</a>
+                                    <a href="flowerList.html" class="text-content">Shop</a>
                                 </li>
                                 <li>
                                     <a href="about-us.html" class="text-content">About Us</a>
