--- a/src/main/resources/templates/client/otp.html
+++ b/src/main/resources/templates/client/otp.html
@@ -135,6 +135,7 @@
                                 <input type="hidden"  th:field="*{otpExprirationTime}">
                                 <input type="hidden"  th:field="*{password}">
                                 <input type="hidden" name="otpInput" id="otpInput">
+                                <input type="hidden" name="flag" th:value = "${flag}">
 
 
 
