--- a/src/main/resources/templates/client/flowerList.html
+++ b/src/main/resources/templates/client/flowerList.html
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+    <h1 th:text="${initialCategoryIDs}"></h1>
 
     <!-- Loader Start -->
     <div class="fullpage-loader">
@@ -152,7 +153,7 @@
                                         <div class="accordion-body">
                                             <ul class="category-list custom-padding custom-height">
                                                 <!-- Sử dụng th:block để lặp mà không tạo thêm thẻ không cần thiết -->
-                                                <th:block th:each="category: ${categories}">
+                                                <th:block th:each="category: ${categoriesDTO}">
                                                     <li>
                                                         <div class="form-check ps-0 m-0 category-list-box">
                                                             <!--
@@ -1175,7 +1176,7 @@
 
     <!-- theme setting js -->
     <script src="../assets/js/theme-setting.js"></script>
-    <script>
+    <script th:inLine="javascript">
         let debounceTimeout;
         let categoryIDs = new Set();
         let minPrice = null;
@@ -1374,12 +1375,16 @@
 
             const initialCategoryIDs = /*[[${initialCategoryIDs}]]*/ '';
 
+            console.log("initialCategoryIDs : ",initialCategoryIDs)
+
             if(initialCategoryIDs){
                 const ids = initialCategoryIDs.split(',');
-                id.forEach(id =>{
+                ids.forEach(id =>{
                     if(id){
                         const checkbox = document.getElementById( `category-${id}`);
                         if(checkbox){
+                            checkbox.checked = true;
+                            categoryIDs.add(id);
 
                         }
                     }
