feat(auth): Improve forgot password flow and add success message
Refactors the forgot password controller to improve code structure and user experience.

Key changes:
- Implements the Post-Redirect-Get (PRG) pattern in the `changePassword` method. Instead of returning the login view directly, it now redirects to `/login`. This prevents form re-submission on page refresh.
- Uses `RedirectAttributes` to pass a success message to the login page after a successful password change.
- The `LoginController` is updated to receive and display this success message.
- Simplifies the `ForgotController` by removing an unnecessary constructor and a redundant try-catch block.
- Ensures the user's email is passed back to the view if password confirmation fails, allowing the form to be repopulated.

--- a/src/main/resources/templates/client/changePassword.html
+++ b/src/main/resources/templates/client/changePassword.html
@@ -1,24 +1,72 @@
+<!-- src/main/resources/templates/client/changePassword.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+<!-- Mirrored from themes.pixelstrap.com/fastkart/front-end/otp.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Oct 2025 16:59:49 GMT -->
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Fastkart">
+    <meta name="keywords" content="Fastkart">
+    <meta name="author" content="Fastkart">
+    <link rel="icon" href="../assets/images/favicon/1.png" type="image/x-icon">
+    <title>On-demand last-mile delivery</title>
+
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com/">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap">
+
+    <!-- bootstrap css -->
+    <link id="rtl-link" rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
+
+    <!-- Iconly css -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/bulk-style.css">
+
+    <!-- Template css -->
+    <link id="color-link" rel="stylesheet" type="text/css" href="../assets/css/style.css">
 </head>
+
 <body>
-<form th:action="@{/change-password}" method="post">
-    <input type="hidden" name ="email" th:value="${email}"/>
+<div th:replace="~{client/component/headerClient::headerClient}"></div>
 
+<section class="log-in-section section-b-space">
+    <div class="container-fluid-lg w-100">
+        <div class="row justify-content-center">
+            <div class="col-xxl-4 col-xl-5 col-lg-6 col-sm-8 mx-auto">
+                <div class="log-in-box">
+                    <div class="log-in-title">
+                        <h3>Set New Password</h3>
+                        <h4>Enter your new password below.</h4>
+                    </div>
+                    <div class="input-box">
+                        <form class="row g-4" th:action="@{/change-password}" method="post">
+                            <input type="hidden" name="email" th:value="${email}"/>
 
+                            <div th:if="${errorMessage}" class="alert alert-danger" th:text="${errorMessage}"></div>
 
-    <div th:if="${errorMessage}" class="text-danger mb-2">
-        <p th:text="${errorMessage}"></p>
+                            <div class="col-12">
+                                <div class="form-floating theme-form-floating">
+                                    <input type="password" class="form-control" name="password" id="password" placeholder="New Password" required>
+                                    <label for="password">New Password</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating theme-form-floating">
+                                    <input type="password" class="form-control" name="confirmPassword" id="confirmPassword" placeholder="Confirm New Password" required>
+                                    <label for="confirmPassword">Confirm New Password</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <button class="btn btn-animation w-100" type="submit">Change Password</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <label for="password">New Password</label>
-    <input type="password" name="password" id="password">
-    <label for="confirmPassword">Confirm Password</label>
-    <input type="password" name="confirmPassword" id="confirmPassword">
-    <button type="submit">Change Password</button>
-</form>
+</section>
 </body>
 </html>
