staff and shipper

--- a/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
+++ b/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
@@ -84,6 +84,22 @@
                                 </li>
                             </ul>
                         </li>
+
+
+                    <li class="sidebar-list">
+                        <a class="sidebar-link sidebar-title" href="javascript:void(0)">
+                            <i class="ri-user-3-line"></i>
+                            <span>Staff & Shipper</span>
+                        </a>
+                        <ul class="sidebar-submenu">
+                            <li>
+                                <a th:href="@{/manager/staff-shipper}">List Staff & Shipper</a>
+                            </li>
+<!--                            <li>-->
+<!--                                <a th:href="@{/users/add}">Add new user</a>-->
+<!--                            </li>-->
+                        </ul>
+                    </li>
                     </ul>
 
 
