--- a/src/main/resources/templates/client/forgot.html
+++ b/src/main/resources/templates/client/forgot.html
@@ -132,12 +132,14 @@
                             </div>
 
                             <div class="input-box">
+                                <span th:text="${error}" style="color: red; font-size: 20px; margin-bottom: 10px;"></span>
                                 <form class="row g-4" th:action="@{/forgot}" method="POST">
                                     <div class="col-12">
                                         <div class="form-floating theme-form-floating log-in-form">
                                             <input type="email" class="form-control" name="email" id="email"
                                                 placeholder="Email Address">
                                             <label for="email">Email Address</label>
+
                                         </div>
                                     </div>
 
